# ethercat_driver_ros2_examples

ethercat_relay_drive/: CMakeLists.txt  package.xml  readme.md
ethercat_relay_drive/config/: controllers.yaml
ethercat_relay_drive/description/config/: relay_drive.config.xacro
ethercat_relay_drive/description/ros2_control/: relay_drive.ros2_control.xacro
ethercat_relay_drive/launch/: relay_drive.launch.py
ethercat_slave_description/: CMakeLists.txt  README.md
ethercat_slave_description/config/beckhoff/: beckhoff_el1002.yaml  beckhoff_el2002.yaml  beckhoff_el2622.yaml  beckhoff_el6224.yaml
ethercat_slave_description/scripts/: decode_el6224_values.py  el6224_snapshot_diff.py  generate_el6224_from_iodd.py  replay_el6224_twincat_startup.sh  validate_el6224_startup.sh
ethercat_test_drive/: CMakeLists.txt  package.xml  readme.md
ethercat_test_drive/config/: beckhoff_el1904.yaml  beckhoff_el2904.yaml  beckhoff_el6900.yaml  controllers.yaml  el6900_el1904_el2904_fsoe.yaml  safety_controllers.yaml
ethercat_test_drive/description/config/: safety_test_drive.config.xacro  test_drive.config.xacro
ethercat_test_drive/description/ros2_control/: safety_test_drive.ros2_control.xacro  test_drive.ros2_control.xacro
ethercat_test_drive/launch/: safety_test_drive.launch.py  test_drive.launch.py
