<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_test_drive</name>
  <version>0.0.1</version>
  <description>
    Example package for testing Beckhoff EtherCAT I/O modules via ros2_control
    GPIO controllers: EK1100 coupler, EL2622 relay outputs, EL1002 digital
    inputs, EL2002 digital outputs, EL6224 IO-Link master with SICK DT35
    distance sensor.
  </description>
  <maintainer email="mcbed.robotics@gmail.com">Maciej Bednarczyk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ethercat_driver</exec_depend>
  <exec_depend>ethercat_interface</exec_depend>
  <exec_depend>ethercat_generic_slave</exec_depend>
  <exec_depend>ethercat_slave_description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gpio_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
